Added Loops and Conditional Files

--- a/Basics_Operators.ipynb
+++ b/Basics_Operators.ipynb
@@ -186,11 +186,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -281,6 +276,13 @@
    ],
    "source": [
     "print ( a + b * x) # Here first multi will take place then addition coz multi has higher precedence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importance"
    ]
   },
   {
