Added list compresion to list

--- a/Basics_Functions.ipynb
+++ b/Basics_Functions.ipynb
@@ -310,6 +310,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function(a, b, /, *, c, d):# COmbined a and b are position only and c and d are keyword only\n",
+    "  print(a + b + c + d)\n",
+    "\n",
+    "my_function(5, 6, c = 7, d = 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exception Handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is a error\n",
+      "The try-except has ended\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: # If there's an error in try it will execute the except statment or else only try will be executed\n",
+    "    print(x)\n",
+    "except: \n",
+    "    print(\"There is a error\")\n",
+    "finally:# This statment will be executed, dosn't matter which of above statment is executed\n",
+    "    print('The try-except has ended')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
