--- a/Basics_Dict.ipynb
+++ b/Basics_Dict.ipynb
@@ -333,6 +333,136 @@
    "source": [
     "# del and clear are same as others"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Copying dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can't use dict1 = dict2 coz change made in dict2 will automaticall reflect in dict1\n",
+    "# So we use copy() method\n",
+    "thisdict = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "mydict = thisdict.copy()\n",
+    "print(mydict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Another method to do the same is dict()\n",
+    "thisdict = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "mydict = dict(thisdict)\n",
+    "print(mydict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nested Dictionareis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myfamily = {\n",
+    "  \"child1\" : {\n",
+    "    \"name\" : \"Emil\",\n",
+    "    \"year\" : 2004\n",
+    "  },\n",
+    "  \"child2\" : {\n",
+    "    \"name\" : \"Tobias\",\n",
+    "    \"year\" : 2007\n",
+    "  },\n",
+    "  \"child3\" : {\n",
+    "    \"name\" : \"Linus\",\n",
+    "    \"year\" : 2011\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Another way to do the same is  first create 3 dict seperated then add them together\n",
+    "child1 = {\n",
+    "  \"name\" : \"Emil\",\n",
+    "  \"year\" : 2004\n",
+    "}\n",
+    "child2 = {\n",
+    "  \"name\" : \"Tobias\",\n",
+    "  \"year\" : 2007\n",
+    "}\n",
+    "child3 = {\n",
+    "  \"name\" : \"Linus\",\n",
+    "  \"year\" : 2011\n",
+    "}\n",
+    "\n",
+    "myfamily = {\n",
+    "  \"child1\" : child1,\n",
+    "  \"child2\" : child2,\n",
+    "  \"child3\" : child3\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tobias\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To acces the name \n",
+    "print(myfamily[\"child2\"][\"name\"])"
+   ]
   }
  ],
  "metadata": {
